<resources>
    <string name="app_name">kohipetshopu</string>
    <string name="cari">Cari</string>
    <string name="action_search" />
    <string name="pelaku_terakhir">Pelaku Terakhir :</string>
    <string name="proses_pemesanan">Proses Pemesanan</string>
    <string name="transaksi_penjualan">Transaksi Penjualan</string>
    <string name="layanan">Layanan</string>
    <string name="kelola_customer">Kelola Customer</string>
    <string name="todo">TODO</string>
    <string name="kelola_hewan">Kelola Hewan</string>
    <string name="titik_dua">:</string>
</resources>
